# tipchain-original

./: README.md
contract/: Cargo.toml  contract_address.txt  deploy.sh
contract/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
frontend/: COMMANDS.md  README.md  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/create-profile/: page.tsx
frontend/src/app/discover/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/tip/[username]/: page.tsx
frontend/src/components/: EditProfileButton.tsx  ImageUploader.tsx  Navbar.tsx
frontend/src/utils/: cloudinaryUploader.ts  tokenTransfer.ts
